--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,29 +24,7 @@
 	  		</ul>
 	  	</div>
   	</nav>
-  	<h1>회원가입</h1>
-  	
-  	<div class="container">
-  		<form action="/create">
-			<div class="mb-3">
-				<label for="userId">사용자 아이디</label>
-				<input type="text" class="form-control" name="userId" placeholder="userId">
-				<div class="invalid-feedback">Please enter a valid</div>
-			</div>
-			<div class="mb-3">
-				<label for="password">Password</label>
-				<input type="password" class="form-control" name="password" placeholder="password">
-				<div class="invalid-feedback">Please enter a valid</div>
-			</div>
-			<div class="mb-3">
-				<label for="name">이름</label>
-				<input type="text" class="form-control" name="name" placeholder="name">
-				<div class="invalid-feedback">Please enter a valid</div>
-			</div>
-			
-			<button class="btn btn-primary btn-lg btn-block" type="submit">submit</button>
-  		</form>
-  	</div>
+  	<h1>Hello world! Template</h1>
   	
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
