--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -21,32 +21,34 @@
   		<div class="collapse navbar-collapse">
 	  		<ul class="nav navbar-nav navbar-right">
 	  			<li><a href="/form.html">회원가입</a></li>
+	  			<li><a href="/list">사용자 목록</a></li>
 	  		</ul>
 	  	</div>
   	</nav>
-  	<h1>회원가입</h1>
   	
   	<div class="container">
-  		<form action="/create">
-			<div class="mb-3">
-				<label for="userId">사용자 아이디</label>
-				<input type="text" class="form-control" name="userId" placeholder="userId">
-				<div class="invalid-feedback">Please enter a valid</div>
-			</div>
-			<div class="mb-3">
-				<label for="password">Password</label>
-				<input type="password" class="form-control" name="password" placeholder="password">
-				<div class="invalid-feedback">Please enter a valid</div>
-			</div>
-			<div class="mb-3">
-				<label for="name">이름</label>
-				<input type="text" class="form-control" name="name" placeholder="name">
-				<div class="invalid-feedback">Please enter a valid</div>
-			</div>
-			
-			<button class="btn btn-primary btn-lg btn-block" type="submit">submit</button>
-  		</form>
+  		<table class="table table-condensed">
+  			<caption>사용자 목록</caption>
+  			<thead>
+  				<tr>
+  					<th>사용자 아이디</th>
+  					<th>이름</th>
+  					<th>이메일</th>
+  				</tr>
+  			</thead>
+  			<tbody>
+  				{{#users}}
+  				<tr>
+  					<th scope="row">{{userId}}</th>
+  					<td>{{name}}</td>
+  					<td>{{email}}</td>
+  				</tr>
+  				{{/users}}
+  			</tbody>
+  		</table>
   	</div>
+  	
+  	<h1>Hello world! Template</h1>
   	
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
