--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,35 +1,61 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!DOCTYPE html>
+<html lang="kr">
+<head>
+{{> /include/header}}
+</head>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css">
+<body>
+{{> /include/navigation}}
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-  	
-  	<nav class="navbar navbar-default">
-  		<div class="container-fluid">
-  			<div class="navbar-header">
-  				<a class="navbar-brand" href="#">SLiPP</a>
-  			</div>
-  		</div>
-  		<div class="collapse navbar-collapse">
-	  		<ul class="nav navbar-nav navbar-right">
-	  			<li><a href="/form.html">회원가입</a></li>
-	  		</ul>
-	  	</div>
-  	</nav>
-  	<h1>Hello world! Template</h1>
-  	
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="/webjars/jquery/3.1.0/jquery.min.js"></script>
-<!--     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script> -->
-    <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
-  </body>
+<div class="container" id="main">
+   <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
+      <div class="panel panel-default qna-list">
+          <ul class="list">
+          	  {{#questions}}
+              <li>
+                  <div class="wrap">
+                      <div class="main">
+                          <strong class="subject">
+                              <a href="/questions/{{id}}">{{title}}</a>
+                          </strong>
+                          <div class="auth-info">
+                              <i class="icon-add-comment"></i>
+                              <span class="time">{{formattedCreateDate}}</span>
+                              <a href="./user/profile.html" class="author">{{writer.userId}}</a>
+                          </div>
+                          <div class="reply" title="댓글">
+                              <i class="icon-reply"></i>
+                              <span class="point">{{countOfAnswer}}</span>
+                          </div>
+                      </div>
+                  </div>
+              </li>
+              {{/questions}}
+          </ul>
+          <div class="row">
+              <div class="col-md-3"></div>
+              <div class="col-md-6 text-center">
+                  <ul class="pagination center-block" style="display:inline-block;">
+                      <li><a href="#">«</a></li>
+                      <li><a href="#">1</a></li>
+                      <li><a href="#">2</a></li>
+                      <li><a href="#">3</a></li>
+                      <li><a href="#">4</a></li>
+                      <li><a href="#">5</a></li>
+                      <li><a href="#">»</a></li>
+                </ul>
+              </div>
+              <div class="col-md-3 qna-write">
+                  <a href="/questions/form" class="btn btn-primary pull-right" role="button">질문하기</a>
+              </div>
+          </div>
+        </div>
+    </div>
+</div>
+
+<!-- script references -->
+<script src="js/jquery-2.2.0.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/scripts.js"></script>
+	</body>
 </html>
